# porkbrain.com

./: .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TROUBLESHOOTING.md  api.yaml  docker-compose.yaml  error.html  mix.exs  prod.sh  run.sh
assets/: package-lock.json
assets/css/: app.css  home.css  layout.css  typography.css
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
deployment_assets/: .dockerignore  Dockerfile
lib/: bausano.ex  bausano_web.ex  porkbrain.ex  porkbrain_web.ex
lib/bausano/: application.ex  post.ex  repo.ex
lib/bausano_web/: endpoint.ex  gettext.ex  router.ex
lib/bausano_web/channels/: user_socket.ex
lib/bausano_web/controllers/: home_controller.ex  page_controller.ex  post_controller.ex
lib/bausano_web/views/: error_helpers.ex  error_view.ex  home_view.ex  layout_view.ex  page_view.ex  view_helpers.ex
lib/porkbrain/: application.ex  post.ex  repo.ex
lib/porkbrain/tasks/: migration_tast.ex
lib/porkbrain_web/: endpoint.ex  gettext.ex  router.ex
lib/porkbrain_web/channels/: user_socket.ex
lib/porkbrain_web/controllers/: home_controller.ex  lectures_controller.ex  post_controller.ex
lib/porkbrain_web/plugs/: authorization.ex
lib/porkbrain_web/views/: error_helpers.ex  error_view.ex  home_view.ex  layout_view.ex  lectures_view.ex  view_helpers.ex
priv/repo/: seeds.exs
src/: db.rs  html.rs  main.rs  prelude.rs
src/templates/: index.handlebars.html
test/: test_helper.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
(+23 files in other folders)
