[package]
name = "porkbrain_com"
version = "2.0.0"
authors = ["porkbrain <git@porkbrain.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.9"
handlebars = "4.2"
markdown = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rusqlite]
version = "0.27"
# Bundles the necessary libs.
# https://github.com/rusqlite/rusqlite#notes-on-building-rusqlite-and-libsqlite3-sys
features = ["bundled"]
